--- a/.github/workflows/debug_build.yml
+++ b/.github/workflows/debug_build.yml
@@ -1,6 +1,12 @@
 name: Build
 
-on: [push,pull_request]
+on:
+  push:
+    branches:
+      - dex-zoom-tmp
+  pull_request:
+    branches:
+      - dex-zoom-tmp
 
 jobs:
   build:
