--- a/.github/workflows/debug_build.yml
+++ b/.github/workflows/debug_build.yml
@@ -3,10 +3,10 @@ name: Build
 on:
   push:
     branches:
-      - dex-zoom-tmp
+      - master
   pull_request:
     branches:
-      - dex-zoom-tmp
+      - master
 
 jobs:
   build:
