--- a/.github/workflows/debug_build.yml
+++ b/.github/workflows/debug_build.yml
@@ -3,10 +3,10 @@ name: Build
 on:
   push:
     branches:
-      - master
+      - mv-del-docs-tmp
   pull_request:
     branches:
-      - master
+      - mv-del-docs-tmp
 
 jobs:
   build:
