--- a/.github/workflows/debug_build.yml
+++ b/.github/workflows/debug_build.yml
@@ -3,10 +3,10 @@ name: Build
 on:
   push:
     branches:
-      - master
+      - multipleroots-build
   pull_request:
     branches:
-      - master
+      - multipleroots-build
 
 jobs:
   build:
